# voxelG

./: Cargo.toml  README.md  build.rs
benches/: trace.rs
docs/: IMPLEMENTED.md  SCALE_TO_10CM.md  gpu-physics-design.md
shaders/: beam.wgsl  blit.wgsl  common.wgsl  physics.wgsl  raymarch.wgsl  taa.wgsl  terrain_gen.wgsl
src/: app.rs  camera.rs  disk_cache.rs  gpu_terrain.rs  lib.rs  main.rs  net.rs  physics.rs  raycast.rs  renderer.rs  server.rs  sprites.rs  temporal.rs  voxel.rs  world_dims.rs
tests/: net_integration.rs  worldgen.rs
