[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[dependencies]
winit = "0.30"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
