[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxelg"
path = "src/lib.rs"

[[bin]]
name = "voxel"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1

[dependencies]
winit = "0.30"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
# Compresses the bulk edit-log/snapshot a late joiner downloads (checklist: net compression).
flate2 = "1"

[dev-dependencies]
# Headless WGSL parse + validation (same major as wgpu) so shader changes are
# caught by `cargo test` without opening a window or needing a GPU.
naga = { version = "23", features = ["wgsl-in"] }
# Microbenchmarks for the CPU hot paths (worldgen + picking raycast).
criterion = "0.5"
# PNG dump for the headless look-dev screenshots (visual iteration without
# opening a game window).
png = "0.17"

[[bench]]
name = "trace"
harness = false
